# scrot

./: .cirrus.yml  .clang-tidy  .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  FAQ  FAQ.md  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  deps.pc  meson.build  requirements.sh  scrot.1  scrot.spec  scrot.spec.in
.github/workflows/: ccpp.yml  full-check.yml
doc/: UPDATE-CHECK  scrot.xcf
etc/: compautogen.c
etc/bash-completion/: scrot
etc/zsh-completion/: _scrot
man/: create-man.sh  scrot.1  scrot.txt
src/: Makefile.am  Makefile.in  config.h.in  debug.h  getopt.c  getopt1.c  imlib.c  imlib.h  main.c  meson.build  note.c  note.h  options.c  options.h  options_delay.c  options_delay.h  opts.h  scrot.c  scrot.h  scrot_selection.c  scrot_selection.h  selection_classic.c  selection_classic.h  selection_edge.c  selection_edge.h  slist.c  slist.h  structs.h  util.c  util.h  utils.c  utils.h
src/giblib/: AUTHORS  ChangeLog  gib_btree.c  gib_btree.h  gib_debug.h  gib_hash.c  gib_hash.h  gib_imlib.c  gib_imlib.h  gib_list.c  gib_list.h  gib_queue.c  gib_queue.h  gib_stack.c  gib_stack.h  gib_style.c  gib_style.h  gib_utils.c  gib_utils.h  giblib.h
